--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ Data Visualization/matplotlib/
 Data Visualization/plotly-tutorial/
 Data Visualization/seaborn/
 NumPy/NumPy-Tutorial/
+01 - NumPy/NumPy-Tutorial/
+02 - Data Visualization/matplotlib/
+02 - Data Visualization/plotly-tutorial/
+02 - Data Visualization/seaborn/
